--- a/side/lab4/index.html
+++ b/side/lab4/index.html
@@ -52,7 +52,7 @@ L4:A2_5</td>
 
 
 <h3>Labori sisevõrgu skeem</h3>
-<img src="pics/wifi_2_4.jpg" alt="LISA SIIA LABORI SISEVÕRGU SKEEM!">
+<img src="" alt="LISA SIIA LABORI SISEVÕRGU SKEEM!">
 <h2>2. WLAN spektri mõõtmine</h2>
 <table border="1" cellpadding="4" cellspacing="0">
 <tbody><tr>
@@ -68,7 +68,7 @@ L4:A2_5</td>
 <td>2,447</td>
 <td>20 MHz</td>
 </tr><tr>
-<td colspan="7"><img src="" alt="LISA SIIA KATSE 1 SPEKTRIPILT!"></td></tr>
+<td colspan="7"><img src="pics/wifi_2_4.jpg" alt="LISA SIIA KATSE 1 SPEKTRIPILT!"></td></tr>
 </tbody></table>
 <p>
 </p><table border="1" cellpadding="4" cellspacing="0">
@@ -86,7 +86,7 @@ L4:A2_5</td>
 <td>42</td>
 </tr>
 <tr>
-<td colspan="7"><img src="" alt="LISA SIIA KATSE 2 SPEKTRIPILT!"></td></tr>
+<td colspan="7"><img src="pics/wifi_5.jpg" alt="LISA SIIA KATSE 2 SPEKTRIPILT!"></td></tr>
 </tbody></table>
 <h3>Edastuskiiruse arvutused mõlemas WLAN võrgus.</h3>
 LISA SIIA EDASTUSKIIRUSTE ARVUTUSED MÕLEMA VÕRGU KOHTA!
@@ -96,7 +96,27 @@ LISA SIIA EDASTUSKIIRUSTE ARVUTUSED MÕLEMA VÕRGU KOHTA!
 <tbody><tr>
 <td colspan="2"><small>2,4 GHz võrk</small> L4:A2_2.4</td></tr>
 <tr><td colspan="2">
-<pre>KOPEERI ESIMESE KÄSU VÄLJUNDFAILI SISU SIIA!
+<pre>There is 1 interface on the system: 
+
+    Name                   : Wireless Network Connection
+    Description            : ASUS USB-AC56 802.11ac Wireless USB Adapter
+    GUID                   : dd71900b-76bb-4f91-bcf0-8d907558bfca
+    Physical address       : f0:79:59:e8:ba:ef
+    State                  : connected
+    SSID                   : L4:A2_2.4
+    BSSID                  : 08:62:66:8d:05:08
+    Network type           : Infrastructure
+    Radio type             : 802.11g
+    Authentication         : WPA2-Personal
+    Cipher                 : CCMP
+    Connection mode        : Profile
+    Channel                : 6
+    Receive rate (Mbps)    : 54
+    Transmit rate (Mbps)   : 54
+    Signal                 : 100% 
+    Profile                : L4:A2_2.4 
+
+    Hosted network status  : Not available
 </pre>
 </td></tr>
 <tr>
@@ -106,7 +126,27 @@ LISA SIIA EDASTUSKIIRUSTE ARVUTUSED MÕLEMA VÕRGU KOHTA!
 <td>54 Mbps</td>
 </tr><tr><td colspan="2"><small>5 GHz võrk</small> L4:A2_5</td></tr>
 <tr><td colspan="2">
-<pre>KOPEERI TEISE KÄSU VÄLJUNDFAILI SISU SIIA!
+<pre>There is 1 interface on the system: 
+
+    Name                   : Wireless Network Connection
+    Description            : ASUS USB-AC56 802.11ac Wireless USB Adapter
+    GUID                   : dd71900b-76bb-4f91-bcf0-8d907558bfca
+    Physical address       : f0:79:59:e8:ba:ef
+    State                  : connected
+    SSID                   : L4:A2_5
+    BSSID                  : 08:62:66:8d:05:0c
+    Network type           : Infrastructure
+    Radio type             : 802.11n
+    Authentication         : WPA2-Personal
+    Cipher                 : CCMP
+    Connection mode        : Profile
+    Channel                : 48
+    Receive rate (Mbps)    : 300
+    Transmit rate (Mbps)   : 300
+    Signal                 : 100% 
+    Profile                : L4:A2_5 
+
+    Hosted network status  : Not available
 </pre>
 </td></tr>
 <tr>
