added inssider and tamosoft pics

--- a/side/lab4/index.html
+++ b/side/lab4/index.html
@@ -160,7 +160,7 @@ LISA SIIA EDASTUSKIIRUSTE ARVUTUSED MÕLEMA VÕRGU KOHTA!
 
 <h3>Programmi <font face="Courier New, monospace"><i>inSSIDer 3</i></font> ekraanipilt</h3>
 
-<img src="" alt="LISA SIIA INSSIDER EKRAANIPILT!">
+<img src="pics/inssider.png" alt="LISA SIIA INSSIDER EKRAANIPILT!">
 <p>
 
 </p><h3>Küsimused:</h3>
@@ -184,7 +184,7 @@ AP seadmete (wifi jaamade) mac aadressid
 <p>
 802.11g (2,4 GHz) võrk.
 <br>
-<img src="" alt="LISA SIIA TAMOSOFT KLIENTARVUTI EKRAANIPILT 2,4 GHz võrgust!">
+<img src="pics/2_4g_test.png" alt="LISA SIIA TAMOSOFT KLIENTARVUTI EKRAANIPILT 2,4 GHz võrgust!">
 <br>
 SSID: L4:A2_2.4, kanal: 6
 <br>
@@ -196,7 +196,7 @@ keskmine upload 10 Mbps, keskmine download 0 Mbps
 </p><p>
 802.11n (5 GHz) võrk. 
 <br>
-<img src="" alt="LISA SIIA TAMOSOFT KLIENTARVUTI EKRAANIPILT 5 GHz võrgust!">
+<img src="pics/5g_test.png" alt="LISA SIIA TAMOSOFT KLIENTARVUTI EKRAANIPILT 5 GHz võrgust!">
 <br>
 SSID: L4:A2_5, kanal: 48 (auto)
 <br>
