added some more answers

--- a/side/lab4/index.html
+++ b/side/lab4/index.html
@@ -208,7 +208,8 @@ keskmine upload 161 Mbps, keskmine download 0 Mbps
 </p><p>
 
 Milline oli mõlema võrgu (802.11g ja 802.11n) korral maksimaalne saavutatud kiirus mõlema protokolli (TCP ja UDP) korral?</p>
-<p>KÜSIMUSE VASTUS SIIA!</p>
+<p>802.11g puhul maksimaalne TCP kiirus oli 38 Mbps, UDP 28 Mbps
+	802.11n puhul maksimaalne TCP kiirus oli 180 Mbps, UDP 215 Mbps</p>
 
 
 
