--- a/side/lab4/index.html
+++ b/side/lab4/index.html
@@ -218,4 +218,8 @@ Milline oli mõlema võrgu (802.11g ja 802.11n) korral maksimaalne saavutatud ki
 <p>
 Praktikumi käigus õppisin WiFi AP seadistamist ja kahe arvuti omavahel WiFi kaudu ühendamist. Samuti töö käigus sai võrreldud 2,5GHz ja 5GHz võrgu sagedusribasid ja kiirusi. Sai võrreldud ja õpitud TCP ja UDP korral erinavaid kiirusi. Samuti sai arvutatud kanali kiirus Shannoni valemiga sagedusriba alusel.
 </p>
+<p>
+    <a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Transitional" height="31" width="88"></a>
+  </p>
 </body></html>
