added pics to yl1

--- a/side/lab2/index.html
+++ b/side/lab2/index.html
@@ -38,7 +38,7 @@
 <td>LISA SIIA SUURIMA VÕIMALIKU ARVUTUSED</td>
 </tr>
 <tr>
-<td colspan="6"><img src="" alt="LISA SIIA SUURIMA VÕIMALIKU EKRAANIPILT!"></td>
+<td colspan="6"><img src="pics/maxhd.png" alt="LISA SIIA SUURIMA VÕIMALIKU EKRAANIPILT!"></td>
 </tr>
 </tbody></table>
 <p>
@@ -60,7 +60,7 @@
 <td>LISA SIIA VGA ARVUTUSED!</td>
 </tr>
 <tr>
-<td colspan="6"><img src="" alt="LISA SIIA VGA EKRAANIPILT!"></td>
+<td colspan="6"><img src="pics/vga.png" alt="LISA SIIA VGA EKRAANIPILT!"></td>
 </tr>
 </tbody></table>
 <p>
@@ -82,7 +82,7 @@
 <td>LISA SIIA CIF ARVUTUSED!</td>
 </tr>
 <tr>
-<td colspan="6"><img src="" alt="LISA SIIA CIF EKRAANIPILT!"></td>
+<td colspan="6"><img src="pics/cif.png" alt="LISA SIIA CIF EKRAANIPILT!"></td>
 </tr>
 </tbody></table>
 <p>
@@ -104,7 +104,7 @@
 <td>LISA SIIA QCIF ARVUTUSED!</td>
 </tr>
 <tr>
-<td colspan="6"><img src="" alt="LISA SIIA QCIF EKRAANIPILT!"></td>
+<td colspan="6"><img src="pics/qcif.png" alt="LISA SIIA QCIF EKRAANIPILT!"></td>
 </tr>
 </tbody></table>
 
