added some pics to html

--- a/side/lab1/index.html
+++ b/side/lab1/index.html
@@ -77,8 +77,8 @@ KIRJUTA LAHENDUS SIIA!
 <tr>
 <td>Pinge amplituud</td>
 <td>750</td>
-<td rowspan="3"><img src="" alt="LISA SIIA VILE SIGNAALIPILT!"></td>
-<td rowspan="3"><img src="" alt="LISA SIIA VILE SPEKTRIPILT!"></td>
+<td rowspan="3"><img src="pics/TEK0005.JPG" alt="LISA SIIA VILE SIGNAALIPILT!"></td>
+<td rowspan="3"><img src="pics/TEK0010.JPG" alt="LISA SIIA VILE SPEKTRIPILT!"></td>
 </tr>
 <tr>
 <td>Periood</td>
@@ -99,8 +99,9 @@ KIRJUTA LAHENDUS SIIA!
 <tr>
 <td>Pinge amplituud (kõige suurem)</td>
 <td>524</td>
-<td rowspan="5"><img src="" alt="LISA SIIA VOKAALI SIGNAALIPILT!"></td>
-<td rowspan="5"><img src="" alt="LISA SIIA VOKAALI SPEKTRIPILT!"></td>
+<td rowspan="5"><tr><img src="pics/TEK0006.JPG" alt="LISA SIIA VOKAALI SIGNAALIPILT!"></tr>
+<tr><img src="TEK0009.JPG" alt="LISA SIIA VOKAALI SIGNAALIPILT!"></tr></td>
+<td rowspan="5"><img src="pics/TEK0010.JPG" alt="LISA SIIA VOKAALI SPEKTRIPILT!"></td>
 </tr>
 <tr>
 <td>Periood (kõige pikem) </td>
