changed pics layout

--- a/side/lab1/index.html
+++ b/side/lab1/index.html
@@ -99,8 +99,8 @@ KIRJUTA LAHENDUS SIIA!
 <tr>
 <td>Pinge amplituud (kõige suurem)</td>
 <td>524</td>
-<td rowspan="5"><tr><img src="pics/TEK0006.JPG" alt="LISA SIIA VOKAALI SIGNAALIPILT!"></tr>
-<tr><img src="TEK0009.JPG" alt="LISA SIIA VOKAALI SIGNAALIPILT!"></tr></td>
+<td rowspan="5"><img src="pics/TEK0006.JPG" alt="LISA SIIA VOKAALI SIGNAALIPILT!"></td>
+<td rowspan="5"><img src="pics/TEK0009.JPG" alt="LISA SIIA VOKAALI SIGNAALIPILT!"></td>
 <td rowspan="5"><img src="pics/TEK0010.JPG" alt="LISA SIIA VOKAALI SPEKTRIPILT!"></td>
 </tr>
 <tr>
