--- a/side/lab1/index.html
+++ b/side/lab1/index.html
@@ -93,7 +93,8 @@ KIRJUTA LAHENDUS SIIA!
 <table border="1" cellpadding="4" cellspacing="0">
 <tbody><tr>
 <td colspan="2">Vokaal A</td>
-<td>Signaalpilt</td>
+<td>Signaalpilt(korge)</td>
+<td>Signaalpilt(madal)</td>
 <td>Spektripilt</td>
 </tr>
 <tr>
