--- a/side/lab1/index.html
+++ b/side/lab1/index.html
@@ -102,7 +102,7 @@ KIRJUTA LAHENDUS SIIA!
 <td>524</td>
 <td rowspan="5"><img src="pics/TEK0006.JPG" alt="LISA SIIA VOKAALI SIGNAALIPILT!"></td>
 <td rowspan="5"><img src="pics/TEK0009.JPG" alt="LISA SIIA VOKAALI SIGNAALIPILT!"></td>
-<td rowspan="5"><img src="pics/TEK0010.JPG" alt="LISA SIIA VOKAALI SPEKTRIPILT!"></td>
+<td rowspan="5"><img src="pics/TEK0011.JPG" alt="LISA SIIA VOKAALI SPEKTRIPILT!"></td>
 </tr>
 <tr>
 <td>Periood (kõige pikem) </td>
@@ -126,7 +126,7 @@ KIRJUTA LAHENDUS SIIA!
 <table border="1" cellpadding="4" cellspacing="0">
 <tbody><tr>
 <td>Kutsesignaal</td>
-<td><img src="" alt="LISA SIIA KUTSESIGNAALI KUJU PILT!"></td>
+<td><img src="pics/TEK0013.JPG" alt="LISA SIIA KUTSESIGNAALI KUJU PILT!"></td>
 </tr>
 <tr>
 <td>Pinge amplituud</td>
@@ -145,8 +145,8 @@ KIRJUTA LAHENDUS SIIA!
 <table border="1" cellpadding="4" cellspacing="0">
 <tbody><tr>
 <td>Toonvalimine</td>
-<td><img src="" alt="LISA SIIA ESIMESE VALITUD NUMBRI SPEKTRI PILT!"></td>
-<td><img src="" alt="LISA SIIA TEISE VALITUD NUMBRI SPEKTRI PILT!"></td>
+<td><img src="pics/TEK0014.JPG" alt="LISA SIIA ESIMESE VALITUD NUMBRI SPEKTRI PILT!"></td>
+<td><img src="pics/TEK0015.JPG" alt="LISA SIIA TEISE VALITUD NUMBRI SPEKTRI PILT!"></td>
 </tr>
 <tr>
 <td>valitud number</td>
