--- a/side/index.html
+++ b/side/index.html
@@ -1,11 +1,11 @@
 <html>
 <head></head>
 <body>
-ITK aines Sidevõrgud tehtud laborid.
-Laborid mõõdetud 10.04.2016.
-<a href="http://er1zo.github.io/side/lab1/">Labor 1</a>
-<a href="http://er1zo.github.io/side/lab2/">Labor 2</a>
-<a href="http://er1zo.github.io/side/lab4/">Labor 4</a>
+ITK aines Sidevõrgud tehtud laborid.<br>
+Laborid mõõdetud 10.04.2016.<br><br>
+<a href="http://er1zo.github.io/side/lab1/">Labor 1</a><br>
+<a href="http://er1zo.github.io/side/lab2/">Labor 2</a><br>
+<a href="http://er1zo.github.io/side/lab4/">Labor 4</a><br>
 (c) Aleksei Volkov
 
 </body>
