--- a/side/lab4/index.html
+++ b/side/lab4/index.html
@@ -52,7 +52,7 @@ L4:A2_5</td>
 
 
 <h3>Labori sisevõrgu skeem</h3>
-<img src="" alt="LISA SIIA LABORI SISEVÕRGU SKEEM!">
+<img src="pics/scheme.png" alt="LISA SIIA LABORI SISEVÕRGU SKEEM!">
 <h2>2. WLAN spektri mõõtmine</h2>
 <table border="1" cellpadding="4" cellspacing="0">
 <tbody><tr>
