--- a/side/lab4/index.html
+++ b/side/lab4/index.html
@@ -181,11 +181,11 @@ R = 40 * log<sub>2</sub> (1+39,81) = 214 Mbit/s<br>
 
 </p><h3>Küsimused:</h3>
 <small>1. Millised kanalid on hõivatud Teie võrkude spektrite poolt?</small><br>
-48+52
+2,4 GHz võrgus on kasutusel kanal 6 ja selle spekter hõivab kanaleid (ülekattub kanalitega) 4-8. 5 GHz võrgus on meil kasutusel kanalid 48+52 ja selle spekter hõivab kanaleid (ülekattub kanalitega) 46-54.
 
 <p> 
 <small>2. Kui suurt andmeedastuskiirust teoreetiliselt on võimalik kasutada Teie WLAN võrkudes?</small><br> 
-450
+5 GHz võrgus kiirus on 450MBit/s ja 2,4Ghz võrgus 54MBit/s.
 
 </p><p>
 <small>3. Selgitada <font face="Courier New, monospace"><i>inSSIDer</i></font>'i tabelis näidatavate MAC aadresside tähendust.</small><br>
@@ -193,8 +193,7 @@ AP seadmete (wifi jaamade) mac aadressid
 
 </p><p>
 <small>4. Millised raadiokanalid on kasutuses ja kus on veel vaba ruumi uute võrkude jaoks?</small><br>
-2,4 GHz on vabad kanalid 8-9. 5 GHz on kasutuses 36, 40, 48, 52, 64, 116 (vist), 140 - ülejäänud on vabad
-
+Meil on 2,4 GHz võrgus kasutusel kanal 6, muud kanalid on vabad kasutamiseks. 2,4 GHz võrgus tervikuna on kasutusel kanalid 1, 5, 6, 11 - ruumi uutele võrkudele oleks seal kanalitel 9-13 (vähem kasutatud, ei ole osaliselt ülekaetud), ideaalne oleks 11. 5 GHz võrgus on meil kasutusel kanalid 48+52, võrgus tervikuna on kasutusel kanalid 36, 40, 48, 50, 52, 64, 116, 140; ülejäänud on vabad. Uue võrgu jaoks oleks mõistlik kasutada kanaleid 44, 56, 60, 100-108, 120-134, 149-165.
 
 </p><h2>4. WLAN võrgu kiiruste uurimine</h2>
 <p>
