--- a/side/lab1/index.html
+++ b/side/lab1/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html><head>
-      
-       <title>Labor 1 aruanne</title>
+<title>Labor 1 aruanne</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head><body>
 <h1>Side labor 1 Telefoni analoogliides aruanne</h1>
@@ -40,11 +39,22 @@ Valimistooni kestus: 7.
 <p>
 <b>Leida vool, mis läbib terminalseadet tema mõlemates seisundites ja selgitada tulemusi.</b>
 </p><p>
-KIRJUTA LAHENDUS SIIA!
+<pre>
+Voolutugevus I = U/R [A]
+Pinge U [V]
+Takistus R [Ω]
+1. Vooluringis ei ole voolu kui terminalseade on rahuseisundis.
+2. Hõiveseisundis: I = 2,6 V / 50 Ω = 0,052 A
+</pre>
 </p><p>
 <b>Arvutada telefoniaparaadi takistus ja telefoniliini takistus. </b>
 </p><p>
-KIRJUTA LAHENDUS SIIA!
+<pre>
+Telefonitakistus = U2 / I (hõive) [Ω]
+Telefonitakistus = 7,1 V / 0,052 A = 136.53 Ω
+Liinitakistus = [U1 (rahu) - U1 (hõive)] / I (hõive) [Ω]
+Liinitakistus = (55 V - 9,7 V) / 0,052 A = 871,15 Ω
+</pre>
 </p><p>
 
 </p><h2>2.1 Valimistooni parameetrite mõõtmine</h2>
