proper pic addr

--- a/side/lab1/index.html
+++ b/side/lab1/index.html
@@ -182,7 +182,7 @@ Liinitakistus = (55 V - 9,7 V) / 0,052 A = 871,15 Ω
 <h2>3. Individuaalülesanne</h2>
 INDIVIDUAALÜLESANDE LAHENDUS SIIA!
 
-<img src="pics/pics/individual_graph.png" alt="SIGNAALI KUJU PILT">
+<img src="pics/individual_graph.png" alt="SIGNAALI KUJU PILT">
 
 <h2>Kokkuvõte ja järeldused</h2>
 
