added pic and individual task

--- a/side/lab1/index.html
+++ b/side/lab1/index.html
@@ -180,8 +180,16 @@ Liinitakistus = (55 V - 9,7 V) / 0,052 A = 871,15 Ω
 </tr>
 </tbody></table>
 <h2>3. Individuaalülesanne</h2>
-INDIVIDUAALÜLESANDE LAHENDUS SIIA!
+<pre>
+Kood = *87
+y=A*sin(ω*t+φ)
+A = 1 V
+ω = 2 * pi * f
+φ = 0
+f = 1,1 kHz = 1100 Hz
+y = 1 * sin(2 * pi * 1100 * t + 0)
 
+</pre>
 <img src="pics/individual_graph.png" alt="SIGNAALI KUJU PILT">
 
 <h2>Kokkuvõte ja järeldused</h2>
