--- a/side/lab1/index.html
+++ b/side/lab1/index.html
@@ -191,6 +191,7 @@ y = 1 * sin(2 * pi * 1100 * t + 0)
 
 </pre>
 <img src="pics/individual_graph.png" alt="SIGNAALI KUJU PILT">
+<img src="pics/individual_spectre.png" alt="SIGNAALI KUJU PILT">
 
 <h2>Kokkuvõte ja järeldused</h2>
 
