--- a/side/lab1/index.html
+++ b/side/lab1/index.html
@@ -196,8 +196,13 @@ y = 1 * sin(2 * pi * 1100 * t + 0)
 <h2>Kokkuvõte ja järeldused</h2>
 
 <p>
-KIRJUTA KOKKUVÕTE JA JÄRELDUSED SIIA!
-</p><p>
-
-
-</p></body></html>
+Labori käigus oli võimalik õppida tundma telefoniaparaadi erinevaid töörežiime,
+seisundeid (rahu- ja hõiveseisund) ja vastavaid signaale. Labori 1. osas
+mõõdeti multimeetriga telefoniliini pingeid erinevates seisundites. Labori 2.
+osa keskendus ostsillograafiga signaalide mõõtmisele ja selle käigus uuriti
+valimistooni, vilet, vokaali, kutsesignaali ja toonvalimist. Toonvalimise
+mõõtmisel saadud tulemused vastasid etteantud väärtustele, millest võib
+järeldada, et mõõtmised on korrektsed. Kokkuvõtlikult võimaldas labor kinnistada
+sidevõrkude õppeaine loengutes ja teistes eelnevates õppeainetes, nt. füüsikas,
+omandatud teadmisi.
+</p>></body></html>
