--- a/side/lab1/index.html
+++ b/side/lab1/index.html
@@ -38,7 +38,8 @@ Valimistooni kestus: 7.
 
 <p>
 <b>Leida vool, mis läbib terminalseadet tema mõlemates seisundites ja selgitada tulemusi.</b>
-</p><p>
+</p>
+<p>
 <pre>
 Voolutugevus I = U/R [A]
 Pinge U [V]
@@ -46,18 +47,19 @@ Takistus R [Ω]
 1. Vooluringis ei ole voolu kui terminalseade on rahuseisundis.
 2. Hõiveseisundis: I = 2,6 V / 50 Ω = 0,052 A
 </pre>
-</p><p>
+</p>
+<p>
 <b>Arvutada telefoniaparaadi takistus ja telefoniliini takistus. </b>
-</p><p>
+</p>
+<p>
 <pre>
 Telefonitakistus = U2 / I (hõive) [Ω]
 Telefonitakistus = 7,1 V / 0,052 A = 136.53 Ω
 Liinitakistus = [U1 (rahu) - U1 (hõive)] / I (hõive) [Ω]
 Liinitakistus = (55 V - 9,7 V) / 0,052 A = 871,15 Ω
 </pre>
-</p><p>
-
-</p><h2>2.1 Valimistooni parameetrite mõõtmine</h2>
+</p>
+<h2>2.1 Valimistooni parameetrite mõõtmine</h2>
 <table border="1" cellpadding="4" cellspacing="0">
 <tbody><tr>
 <td>Valimistoon</td>
