--- a/side/lab1/index.html
+++ b/side/lab1/index.html
@@ -207,4 +207,4 @@ mõõtmisel saadud tulemused vastasid etteantud väärtustele, millest võib
 järeldada, et mõõtmised on korrektsed. Kokkuvõtlikult võimaldas labor kinnistada
 sidevõrkude õppeaine loengutes ja teistes eelnevates õppeainetes, nt. füüsikas,
 omandatud teadmisi.
-</p>></body></html>
+</p></body></html>
