--- a/side/lab1/index.html
+++ b/side/lab1/index.html
@@ -203,4 +203,8 @@ mõõtmisel saadud tulemused vastasid etteantud väärtustele, millest võib
 järeldada, et mõõtmised on korrektsed. Kokkuvõtlikult võimaldas labor kinnistada
 sidevõrkude õppeaine loengutes ja teistes eelnevates õppeainetes, nt. füüsikas,
 omandatud teadmisi.
-</p></body></html>
+</p>
+<p>
+    <a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Transitional" height="31" width="88"></a>
+  </p></body></html>
