--- a/side/lab2/index.html
+++ b/side/lab2/index.html
@@ -35,7 +35,11 @@
 <td>2592x1944</td>
 <td>10</td>
 <td>600638 kb/s</td>
-<td>LISA SIIA SUURIMA VÕIMALIKU ARVUTUSED</td>
+<td><pre>
+2592 * 1944 = 5 038 848 piksel/kaader
+5 038 848 * 12 = 60 466 176 bit/kaader
+60 466 176 * 10 = 604 661 760 bit/s
+</pre></td>
 </tr>
 <tr>
 <td colspan="6"><img src="pics/maxhd.png" alt="LISA SIIA SUURIMA VÕIMALIKU EKRAANIPILT!"></td>
