--- a/side/lab2/index.html
+++ b/side/lab2/index.html
@@ -264,6 +264,9 @@ erinevate piirangutega võrkude. Kokkuvõtvalt võib järeldada, et võrgu
 läbilaskevõimel ja edastatavale sisule esitatavatel kvaliteedinõuetel
 on suur roll lõpptulemuse üle.
 
-
+<p>
+    <a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Transitional" height="31" width="88"></a>
+  </p>
 
 </body></html>
